--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "lodash.debounce": "^4.0.8",
     "modern-normalize": "^1.1.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
