--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     ]
   },
   "devDependencies": {
+    "husky": "^4.3.8",
+    "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "prop-types": "^15.7.2",
     "redux-devtools-extension": "^2.13.9"
