--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "chart.js": "^3.5.1",
+    "country-flag-icons": "^1.4.10",
     "lodash.debounce": "^4.0.8",
     "modern-normalize": "^1.1.0",
     "node-sass": "^6.0.1",
@@ -19,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.6",
     "react-hook-form-input": "^1.1.10",
+    "react-intl": "^5.20.10",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
