--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^6.0.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
+    "react-avatar-editor": "^12.0.0",
     "react-dom": "^17.0.2",
     "react-flags-select": "^2.1.2",
     "react-hook-form": "^6.15.6",
